# src/swagger.json
@@ -15,6 +15,21 @@
       "desciption": "Documentação da API de homologação"
     }
   ],
+  "components": {
+    "securitySchemes": {
+      "jwt": {
+        "type": "http",
+        "scheme": "bearer",
+        "in": "header",
+        "bearerFormat": "JWT"
+      }
+    }
+  },
+  "security": [
+    {
+      "jwt": []
+    }
+  ],
   "paths": {
     "/auth/": {
       "post": {
@@ -29,24 +44,17 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "username": {
-                    "description": "user username or email",
+                  "email": {
+                    "description": "user mail",
                     "type": "string"
                   },
                   "password": {
                     "description": "user password",
                     "type": "string"
-                  },
-                  "fields": {
-                    "description": "fields to response",
-                    "type": "array",
-                    "items": {
-                      "type": "string"
-                    }
                   }
                 },
                 "required": [
-                  "username",
+                  "email",
                   "password"
                 ]
               }
@@ -63,19 +71,22 @@
                     "id": {
                       "type": "integer"
                     },
-                    "username": {
-                      "type": "string"
-                    },
                     "email": {
                       "type": "string"
                     },
-                    "state": {
+                    "name": {
                       "type": "string"
                     },
-                    "createdAt": {
+                    "type": {
                       "type": "string"
                     },
-                    "updatedAt": {
+                    "status": {
+                      "type": "string"
+                    },
+                    "created_at": {
+                      "type": "string"
+                    },
+                    "updated_at": {
                       "type": "string"
                     }
                   }
@@ -84,32 +95,416 @@
             }
           },
           "404": {
-            "description": "User not found",
+            "description": "User not found"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/stock/{id}": {
+      "get": {
+        "summary": "",
+        "description": "Get stock by id",
+        "tags": [
+          "Stock"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "description": "stock id",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
             "content": {
               "application/json": {
                 "schema": {
                   "properties": {
-                    "message": {
-                      "type" : "string"
+                    "data": {
+                      "id": 0,
+                      "description": "string",
+                      "quantity": 0,
+                      "price": 0,
+                      "location": "string",
+                      "commission": 0,
+                      "created_by": 3,
+                      "createdAt": "2022-04-15T12:17:46.528Z",
+                      "updatedAt": "2022-04-15T12:17:46.528Z"
                     }
                   }
                 }
               }
             }
           },
-          "401": {
-            "description": "Unauthorized",
+          "422": {
+            "description": "Item not founded"
+          }
+        }
+      }
+    },
+    "/stock/": {
+      "post": {
+        "summary": "",
+        "description": "create stock item",
+        "tags": [
+          "Stock"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "description": {
+                    "description": "description",
+                    "type": "string"
+                  },
+                  "quantity": {
+                    "description": "quantity",
+                    "type": "number"
+                  },
+                  "price": {
+                    "description": "price",
+                    "type": "number"
+                  },
+                  "location": {
+                    "description": "location",
+                    "type": "string"
+                  },
+                  "commission": {
+                    "description": "commission",
+                    "type": "string"
+                  }
+                },
+                "required": [
+                  "description",
+                  "quantity",
+                  "price",
+                  "location",
+                  "commission"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "422": {
+            "description": "Fail to create user"
+          }
+        }
+      }
+    },
+    "/stock/{stockId}": {
+      "put": {
+        "summary": "",
+        "description": "Update stock by id",
+        "tags": [
+          "Stock"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "stockId",
+            "description": "stock id",
+            "required": true
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "description": {
+                    "description": "description",
+                    "type": "string"
+                  },
+                  "quantity": {
+                    "description": "quantity",
+                    "type": "number"
+                  },
+                  "price": {
+                    "description": "price",
+                    "type": "number"
+                  },
+                  "location": {
+                    "description": "location",
+                    "type": "string"
+                  },
+                  "commission": {
+                    "description": "commission",
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
             "content": {
               "application/json": {
                 "schema": {
                   "properties": {
-                    "message": {
-                      "type" : "string"
+                    "data": {
+                      "id": 0,
+                      "description": "string",
+                      "quantity": 0,
+                      "price": 0,
+                      "location": "string",
+                      "commission": 0,
+                      "created_by": 3,
+                      "createdAt": "2022-04-15T12:17:46.528Z",
+                      "updatedAt": "2022-04-15T12:17:46.528Z"
                     }
                   }
                 }
               }
             }
+          },
+          "422": {
+            "description": "Item not founded"
+          }
+        }
+      }
+    },
+    "/stock/itens": {
+      "post": {
+        "summary": "",
+        "description": "find all with filter",
+        "tags": [
+          "Stock"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "page": {
+                    "description": "page number",
+                    "type": "number"
+                  },
+                  "filters": {
+                    "type": "object",
+                    "properties": {
+                      "description": {
+                        "description": "description",
+                        "type": "string"
+                      },
+                      "location": {
+                        "description": "location",
+                        "type": "string"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "properties": {
+                    "data": [
+                      {
+                        "id": 0,
+                        "description": "string",
+                        "quantity": 0,
+                        "price": 0,
+                        "location": "string",
+                        "commission": 0,
+                        "created_by": 3,
+                        "createdAt": "2022-04-15T12:17:46.528Z",
+                        "updatedAt": "2022-04-15T12:17:46.528Z"
+                      }
+                    ]
+                  }
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Fail to search items of stock"
+          }
+        }
+      }
+    },
+    "/sales/": {
+      "post": {
+        "summary": "",
+        "description": "register sale",
+        "tags": [
+          "Sales"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "stock_id": {
+                    "description": "item stock id",
+                    "type": "number"
+                  },
+                  "sold_amount": {
+                    "description": "sold amount",
+                    "type": "number"
+                  },
+                  "discount": {
+                    "description": "discount applyed",
+                    "type": "number"
+                  }
+                },
+                "required": [
+                  "stock_id",
+                  "sold_amount",
+                  "discount"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "item not found in stock or quantity is not available"
+          },
+          "422": {
+            "description": "Fail to create sale"
+          }
+        }
+      }
+    },
+    "/sales/comission/{id}": {
+      "get": {
+        "summary": "",
+        "description": "Get seller comission amount by selected period. Default current month.",
+        "tags": [
+          "Sales"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "description": "seller id",
+            "required": true
+          },
+          {
+            "in": "query",
+            "name": "startOf",
+            "description": "start of date search",
+            "required": false
+          },
+          {
+            "in": "query",
+            "name": "endOf",
+            "description": "endOf date serch",
+            "required": false
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "properties": {
+                    "data": {
+                      "id": 0,
+                      "description": "string",
+                      "quantity": 0,
+                      "price": 0,
+                      "location": "string",
+                      "commission": 0,
+                      "created_by": 3,
+                      "createdAt": "2022-04-15T12:17:46.528Z",
+                      "updatedAt": "2022-04-15T12:17:46.528Z"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Item not founded"
+          }
+        }
+      }
+    },
+    "/sales/comission/": {
+      "get": {
+        "summary": "",
+        "description": "Get sellers comission amount by selected filter. Default current month and all sellers.",
+        "tags": [
+          "Sales"
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "name",
+            "description": "seller name",
+            "required": false
+          },
+          {
+            "in": "query",
+            "name": "startOf",
+            "description": "start of date search [YYYY-MM-DD]",
+            "required": false
+          },
+          {
+            "in": "query",
+            "name": "endOf",
+            "description": "endOf date serch [YYYY-MM-DD]",
+            "required": false
+          },
+          {
+            "in": "query",
+            "name": "order",
+            "description": "order by [ASC, DESC]",
+            "required": false
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "properties": {
+                    "data": {
+                      "id": 0,
+                      "description": "string",
+                      "quantity": 0,
+                      "price": 0,
+                      "location": "string",
+                      "commission": 0,
+                      "created_by": 3,
+                      "createdAt": "2022-04-15T12:17:46.528Z",
+                      "updatedAt": "2022-04-15T12:17:46.528Z"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Item not founded"
           }
         }
       }
